--- a/public/home.html
+++ b/public/home.html
@@ -6,7 +6,7 @@
         <meta name="robots" content="all" />
         <meta name="author" content="IoT_Gateway" />
         <meta name="Copyright" content="Copyright intel All Rights Reserved." />
-        <title>Gateway Data--Center</title>
+        <title>DPS Topology</title>
         <link rel="stylesheet" type="text/css" href="styles/pure.css" />
         <link rel="stylesheet" type="text/css" href="styles/menu.css" />
         <link rel="stylesheet" type="text/css" href="styles/style.css" />
@@ -16,53 +16,16 @@
         <div id="container">
             <a href="home.html"><img border="0" src="images/banner.jpg" width=100% height="68px"></a>
             <div id="content">
-		 <table class="pure-table pure-table-bordered" align="center">
-                     <thead>
-		         <tr>
-		             <th>#</th>
-	                     <th>sensor_name</th>				     
-			     <th>sensor_type</th>
-			     <th>sensor_data</th>
-			     <th>time_stamp</th>
-		         </tr>
-                     </thead>	       
-		     <tbody id="table">
-		     </tbody>
-                 </table>	
-		 <br>
-		 <br>
-		 <button id="btn-reg" type="submit" class="pure-button left">Register Sensor</button>
-                 <button id="btn-unreg" type="submit" class="pure-button right">UnRegister Sensor</button>
-		 <br>
-		 <br>
-		 <br>
-		<fieldset>
-	            <legend style="font-size:17px">please input your sensor data</legend>
-                    <input type="text" id="min-data">
-                    <button id="btn-send">Submit</button>
-	        </fieldset>
-            </div>
+		 <img id="dpgimage" src=images/graph_a.png style="display:block;margin:auto"/>
+	    </div>
         </div>      
     </body>
     <script>
         var request = function() {
             var xhr = new XMLHttpRequest();
             xhr.open("GET", "./data", true);
-            xhr.onreadystatechange = function() {
-                if (xhr.readyState == 4) {
-                   var rows = JSON.parse(xhr.responseText);
-                   var tableContent = '';
-                   for (var i in rows) {
-                       var row = rows[i];
-                       var str = '<tr><td>'+row[0]+'</td><td>'+row[1]+'</td><td>'
-			         +row[2]+'</td><td>'+row[3]+'</td><td>'+row[4]+'</td></tr>'
-                       tableContent += str;
-                   }
-        
-                   document.getElementById("table").innerHTML = tableContent;
-               }
-           }
-           xhr.send();
+            document.getElementById("dpgimage").src = images/graph_b.png;
+            xhr.send();
        }
 
        request();
