--- a/public/home.html
+++ b/public/home.html
@@ -16,47 +16,14 @@
         <div id="container">
             <a href="home.html"><img border="0" src="images/banner.jpg" width=100% height="68px"></a>
             <div id="content">
-		 <img id="dpgimage" src=images/graph_a.png style="display:block;margin:auto"/>
+		 <img id="dpgimage" src=images/graph0.png style="display:block;margin:auto"/>
 	    </div>
         </div>      
     </body>
     <script>
-        var request = function() {
-            var xhr = new XMLHttpRequest();
-            xhr.open("GET", "./data", true);
-            document.getElementById("dpgimage").src = images/graph_b.png;
-            xhr.send();
-       }
+	   setInterval(function() {
+	       document.getElementById("dpgimage").src = 'images/graph.png?version=' + new Date().getTime();
+	   }, 2000);
 
-       request();
-       setInterval(request, 3000);	
-
-       document.getElementById("btn-reg").onclick = function() {
-           var xhr = new XMLHttpRequest();
-           xhr.open("GET", "./regisiter", true);
-           xhr.send();
-       }
-
-       document.getElementById("btn-unreg").onclick = function() {
-          var xhr = new XMLHttpRequest();
-          xhr.open("GET", "./unregisiter", true);
-          xhr.send();
-      }
-
-     document.getElementById("btn-send").onclick = function() {
-         var value = document.getElementById("min-data").value;
-         var intValue = parseInt(value);
-         if (! (/^[0-9]*.$/).test(value)) {
-           alert("Invalid input: please enter numbers");
-           return;    
-        }
-        if (intValue < 0 || intValue > 100  ) {
-          alert("Out of range: 0~100");
-          return;
-        }
-        var xhr = new XMLHttpRequest();
-        xhr.open("GET", "./send?data=" + value);
-        xhr.send();
-     }
     </script>
 </html>
