--- a/public/home.html
+++ b/public/home.html
@@ -16,14 +16,31 @@
         <div id="container">
             <a href="home.html"><img border="0" src="images/banner.jpg" width=100% height="68px"></a>
             <div id="content">
-		 <img id="dpgimage" src=images/graph0.png style="display:block;margin:auto"/>
+		 <img id="dpgimage" src=images/tree_0.jpg style="display:block;margin:auto"/>
 	    </div>
         </div>      
     </body>
     <script>
+/*
 	   setInterval(function() {
-	       document.getElementById("dpgimage").src = 'images/graph.png?version=' + new Date().getTime();
+	       document.getElementById("dpgimage").src = 'images/graph.jpg?version=' + new Date().getTime();
 	   }, 500);
+*/
+           var request = function() {
+                var xhr = new XMLHttpRequest();
+                xhr.open("GET", "./data", true);
+                xhr.onreadystatechange = function() {
+                    if (xhr.readyState == 4) {
+                       document.getElementById("dpgimage").src = 'images/tree_' + xhr.responseText +'.jpg';
+
+                       request();
+                   }
+               }
+               xhr.send();
+           }
+   
+           request();
+//           setInterval(request, 3000);
 
     </script>
 </html>
