--- a/public/home.html
+++ b/public/home.html
@@ -12,35 +12,20 @@
         <link rel="stylesheet" type="text/css" href="styles/style.css" />
     </head>
 
-    <body>
+    <body background="images/BG.jpg">
         <div id="container">
-            <a href="home.html"><img border="0" src="images/banner.jpg" width=100% height="68px"></a>
+            <a href="home.html"><img border="0" src="images/banner.jpg" width=100% height="70px"></a>
             <div id="content">
-		 <img id="dpgimage" src=images/tree_0.jpg style="display:block;margin:auto"/>
+		 <img id="dpsimage" src=images/tree_0.png style="display:block;margin:auto; padding-top: 60px;padding-left: 130px;"/>
+
 	    </div>
         </div>      
     </body>
     <script>
-/*
-	   setInterval(function() {
-	       document.getElementById("dpgimage").src = 'images/graph.jpg?version=' + new Date().getTime();
-	   }, 500);
-*/
-           var request = function() {
-                var xhr = new XMLHttpRequest();
-                xhr.open("GET", "./data", true);
-                xhr.onreadystatechange = function() {
-                    if (xhr.readyState == 4) {
-                       document.getElementById("dpgimage").src = 'images/tree_' + xhr.responseText +'.jpg';
 
-                       request();
-                   }
-               }
-               xhr.send();
-           }
-   
-           request();
-//           setInterval(request, 3000);
+	   setInterval(function() {
+	       document.getElementById("dpsimage").src = 'images/graph.jpg?version=' + new Date().getTime();
+	   }, 300);
 
     </script>
 </html>
