make the image and background resize synchronizely
Signed-off-by: guchaojie <chao.jie.gu@intel.com>

--- a/public/control.html
+++ b/public/control.html
@@ -15,15 +15,14 @@
     <body background="images/BG.jpg">
         <div id="container">
             <a href="home.html"><img border="0" src="images/banner.jpg" width=100% height="70px"></a>
-            <div id="content">
-				<img id="dpsimage" src=images/tree_0.png style="display:block;margin:auto; padding-top: 10px;"/>
-			</div>
+		<div id="content">
+		     <img id="dpsimage" src=images/tree_0.png style="display:block;margin:auto; padding-top: 10px;"/>
+		</div>
         </div>      
     </body>
     <script>
-	   setInterval(function() {
-	       document.getElementById("dpsimage").src = 'images/graph.jpg?version=' + new Date().getTime();
-	   }, 300);
-
+	      var xhr = new XMLHttpRequest();
+            xhr.open("GET", "./refresh", true);
+            xhr.send();
     </script>
 </html>
