add light.png to control.html
Signed-off-by: guchaojie <chao.jie.gu@intel.com>

--- a/public/control.html
+++ b/public/control.html
@@ -47,7 +47,7 @@
 				<img src=images/TV.png style="position: relative; display:block;margin:auto; right: -90px; top: -350px;"/>
 				<img src=images/curtain.png style="position: relative; display:block;margin:auto; right: -90px; top: -310px;"/>
 				<img src=images/door.png style="position: relative; display:block;margin:auto; right: -90px; top: -270px;"/>
-				<img src=images/light1.png style="position: relative; display:block;margin:auto; right: -90px; top: -240px;"/>
+				<img src=images/light.png style="position: relative; display:block;margin:auto; right: -90px; top: -240px;"/>
 			</div>
         </div>      
     </body>
